<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Мировая история</string>
    <string name="sign_in_title">Добро пожаловать!</string>
    <string name="sign_in_description">Войдите, чтобы продолжить</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="sign_in_button">Войти</string>
    <string name="sign_in_separate">или</string>
    <string name="sign_in_vk">ВКонтакте</string>
    <string name="sign_in_facebook">Facebook</string>
    <string name="sign_in_google">Google</string>
    <string name="not_registered">Не зарегистрированы?</string>
    <string name="sign_up_title">Регистрация</string>
    <string name="sign_up_button">Зарегистрироваться</string>
    <string name="sign_up_add_avatar">Добавить аватар</string>
    <string name="hint_firstname">Имя</string>
    <string name="hint_surname">Фамилия</string>
    <string name="already_registered">Уже зарегистрированы?</string>
    <string name="world_history_description">Мировая история</string>
    <string name="stories_description">Истории</string>
    <string name="leaders_description">Лидеры</string>
    <string name="achievements_description">Достижения</string>
    <string name="profile_description">Профиль</string>
    <string name="strike_number">0</string>
    <string name="strike_description">Ударный режим</string>
    <string name="life_number">5</string>
    <string name="life_description">Жизнь</string>
    <string name="crystal_number">100</string>
    <string name="crystal_description">Кристалл</string>
    <string name="lock_description">Заблокировано</string>
    <string name="lock_title_first_stroke">Пройдите главу</string>
    <string name="primary_society_title">Первобытное общество</string>
    <string name="primary_society_description">Первобытное общество</string>
    <string name="primary_society_progress_number">21%</string>
    <string name="ancient_world_title">Древний мир</string>
    <string name="ancient_world_description">Древний мир</string>
    <string name="ancient_world_progress_number">0%</string>
    <string name="ancient_world_lock_title">«Первобытное общество»</string>
    <string name="middle_ages_title">Средние века</string>
    <string name="middle_ages_description">Средние века</string>
    <string name="middle_ages_progress_number">0%</string>
    <string name="middle_ages_lock_title">«Древний мир»</string>
    <string name="new_time_title">Новое время</string>
    <string name="new_time_description">Новое время</string>
    <string name="new_time_progress_number">0%</string>
    <string name="new_time_lock_title">«Средние века»</string>
    <string name="modern_time_title">Новейшее время</string>
    <string name="modern_time_description">Новейшее время</string>
    <string name="modern_time_progress_number">0%</string>
    <string name="modern_time_lock_title">«Новое время»</string>
    <string name="section_stories_under_development">Раздел «Истории» находится в разработке</string>
    <string name="league_title_cave">Пещера</string>
    <string name="league_title_hut">Хижина</string>
    <string name="league_title_village">Деревня</string>
    <string name="league_title_settlement">Поселок</string>
    <string name="league_title_city">Город</string>
    <string name="league_title_metropolis">Мегаполис</string>
    <string name="league_title_cosmopolis">Космополис</string>
    <string name="league_deadline_7_day">7 дней</string>
    <string name="league_deadline_6_day">6 дней</string>
    <string name="league_deadline_5_day">5 дней</string>
    <string name="league_deadline_4_day">4 дня</string>
    <string name="league_deadline_3_day">3 дня</string>
    <string name="league_deadline_2_day">2 дня</string>
    <string name="league_deadline_1_day">1 день</string>
    <string name="achievements_goals">ЦЕЛИ</string>
    <string name="achievements_awards">НАГРАДЫ</string>
    <string name="achievements_collection">КОЛЛЕКЦИИ</string>
    <string name="goal_day">Цель дня</string>
    <string name="goal_day_number">12 / 20 очков</string>
    <string name="goal_day_deadline">Еще 14 часов</string>
    <string name="ic_30_0_chest">Награда дня</string>
    <string name="ic_30_0_goal_day_status">Награда дня получена</string>
    <string name="goal_week">Цель недели</string>
    <string name="goal_week_number">68 / 150 очков</string>
    <string name="goal_week_deadline">Еще 18 дней</string>
    <string name="ic_30_0_dishes_2" tools:ignore="TypographyFractions">Награда недели 1/3</string>
    <string name="ic_30_0_stone_4">Награда недели 2/3</string>
    <string name="ic_30_0_totem">Награда недели 3/3</string>
    <string name="ic_30_0_goal_week_1_3_status" tools:ignore="TypographyFractions">Награда недели 1/3 получена</string>
    <string name="ic_30_0_goal_week_2_3_status">Награда недели 2/3 получена</string>
    <string name="ic_30_0_goal_week_3_3_status">Награда недели 3/3 получена</string>
    <string name="awards_status_title">Получено наград</string>
    <string name="awards_number">17 / 80 наград</string>
    <string name="award_1_title">Первые шаги</string>
    <string name="award_2_title">Начинающий коллекционер</string>
    <string name="award_1_description">Пройди задание №1 в разделе «Первобытное общество»</string>
    <string name="award_2_description">Собери свою первую коллекцию</string>
    <string name="award_1_image">Шаги</string>
    <string name="award_2_image">Коллекционер</string>
    <string name="award_1_status_number">0 / 1</string>
    <string name="collections_status_title">Собрано коллекций</string>
    <string name="collections_number">2 / 40 коллекций</string>
    <string name="collection_title">Памятники Древнего Египта</string>
    <string name="collection_image">Коллекция</string>
    <string name="collection_status_number">2 / 6</string>
    <string name="profile_title">ПРОФИЛЬ</string>
    <string name="profile_avatar">Аватар пользователя</string>
    <string name="profile_settings">Настройки</string>
    <string name="profile_firstname">Имя</string>
    <string name="profile_surname">Фамилия</string>
    <string name="profile_level_title">Уровень</string>
    <string name="profile_level_number">0</string>
    <string name="profile_lifes_title">Жизни</string>
    <string name="profile_lifes_number">5</string>
    <string name="profile_strike_title">Ударный режим</string>
    <string name="profile_strike_number">12</string>
    <string name="profile_experience_title">Опыт</string>
    <string name="profile_experience_number">84</string>
    <string name="profile_crystals_title">Кристаллы</string>
    <string name="profile_crystals_number">1825</string>
    <string name="profile_league_title">Текущая лига</string>
    <string name="profile_league_active">Пещера</string>
    <string name="profile_league_place_number">6</string>
    <string name="profile_league_place_title">место</string>
    <string name="profile_awards_title">Награды</string>
    <string name="profile_awards_number">17 / 80</string>
    <string name="profile_collections_title">Коллекции</string>
    <string name="profile_collections_number">2 / 40</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_title">НАСТРОЙКИ</string>
    <string name="settings_approve">Утвердить</string>
    <string name="settings_cancel">Отмена</string>
    <string name="settings_your_profile_title">Ваш профиль</string>
    <string name="settings_general_title">Общее</string>
    <string name="settings_other_title">Разное</string>
    <string name="settings_edit">Изменить</string>
    <string name="settings_sign_out">Выйти</string>
    <string name="settings_sound">Звук</string>
    <string name="settings_notifications">Уведомления</string>
    <string name="settings_dark_mode">Темный режим</string>
    <string name="settings_language">Язык</string>
    <string name="settings_language_ru">Россия</string>
    <string name="settings_language_es">Испания</string>
    <string name="settings_language_uk">Великобритания</string>
    <string name="settings_arrow_right">Стрелка вправо</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_rate">Оцените нас</string>
    <string name="settings_support">Поддержка</string>
    <string name="settings_privacy_policy">Политика конфиденциальности</string>
    <string name="settings_about_app">О приложении</string>
    <string name="settings_alert_dialog_ok">ОК</string>
    <string name="settings_about_app_description">Данное приложение разработано в рамках тестирования Android Studio.
        Тема истории очень интересна разработчику и поэтому совмещено приятное с полезным.
        Надеюсь Вы получите удовольствие, пройдя все истории до конца!</string>
</resources>