<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@color/main_bg"
    tools:context=".Activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_title"
            style="@style/TitleTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/sign_in_description"
            style="@style/HintTextView"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/signInEmail"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_40sdp"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_16sdp"
            style="@style/EditText"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/signInPassword"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_16sdp"
            style="@style/EditText"
            tools:ignore="TextContrastCheck" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButton"
                android:layout_width="match_parent"
                android:text="@string/sign_in_button"
                style="@style/Button"/>

            <ProgressBar
                android:id="@+id/signInProgressBar"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary40"
                android:visibility="visible"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/signInSeparated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:orientation="horizontal">

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@color/surface"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:gravity="center"
                style="@style/HintTextView"
                android:text="@string/sign_in_separate"
                tools:ignore="TextContrastCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:background="@color/surface"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/signInVk"
                android:contentDescription="@string/sign_in_vk"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:background="@drawable/ic_0_1_sign_in_vk"/>

            <ImageButton
                android:id="@+id/signInGoogle"
                android:contentDescription="@string/sign_in_google"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_gravity="center"
                android:background="@drawable/ic_0_1_sign_in_google"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/not_registered"
            style="@style/HintTextView"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/sign_in_to_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up_button"
            style="@style/LinkTextView"/>

    </LinearLayout>

</ScrollView>