<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.StoriesFragment">

    <LinearLayout
        android:id="@+id/status_area_on_world_history"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/ic_1_1_status_area_border"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/strike_on_stories"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:contentDescription="@string/strike_description"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:src="@drawable/ic_1_1_general_top_strike_inactive"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/roboto_bold"
                android:gravity="start|center_vertical"
                android:text="@string/strike_number"
                android:textColor="@color/inactive"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/life_on_stories"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:contentDescription="@string/life_description"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:src="@drawable/ic_1_1_general_top_life" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/roboto_bold"
                android:gravity="start|center_vertical"
                android:text="@string/life_number"
                android:textColor="@color/life"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/crystal_on_stories"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="false"
                android:contentDescription="@string/crystal_description"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:src="@drawable/ic_1_1_general_top_crystal_active"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:fontFamily="@font/roboto_bold"
                android:gravity="start|center_vertical"
                android:text="@string/crystal_number"
                android:textColor="@color/crystal"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/section_stories_under_development"
        android:textSize="24sp"
        android:textColor="@color/lock_title" />

</FrameLayout>