<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/sample_achievements_rounded_block">

    <LinearLayout
        android:id="@+id/award_item"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/award_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/award_1_title"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/text_main"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/award_image"
            android:contentDescription="@string/award_1_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_40_0_first_step_active"/>

        <TextView
            android:id="@+id/award_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:gravity="center"
            android:text="@string/award_1_description"
            android:fontFamily="@font/roboto"
            android:textColor="@color/text_main"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/sample_achievements_goals_day_rounded_corners_bg">

            <View
                android:id="@+id/award_status_bar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@drawable/sample_achievements_awards_rounded_corner_active" />

        </LinearLayout>


        <TextView
            android:id="@+id/award_status_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/award_1_status_number"
            android:textColor="@color/achievements_awards_status_number"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>